k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth-service
  labels:
    app.kubernetes.io/name: auth-service
    app.kubernetes.io/part-of: auth
    app.kubernetes.io/component: api
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: auth-service
    app.kubernetes.io/component: api
  ports:
    - name: http
      port: 8080
      targetPort: http
